# tapi

./: CMakeLists.txt  Readme.md
cmake/caches/: apple-tapi.cmake  tapi-defaults.cmake
docs/: SDKDB.rst  TBD_current.rst  index.rst
docs/man/: CMakeLists.txt  tapi-api-verify.1  tapi-sdkdb.1
include/tapi/: APIVersion.h  LinkerInterfaceFile.h  Version.inc.in
lib/: CMakeLists.txt
lib/APIVerifier/: APIVerifier.cpp  TAPIStructuralEquivalence.cpp  TAPIStructuralEquivalence.h
lib/Core/: API.cpp  API2SymbolConverter.cpp  APIJSONSerializer.cpp  APIPrinter.cpp  APIVisitor.cpp  AvailabilityInfo.cpp  CMakeLists.txt  ClangDiagnostics.cpp  Demangler.cpp  FakeSymbols.cpp  FileListReader.cpp  FileManager.cpp  FileSystem.cpp  Framework.cpp  HeaderFile.cpp  InterfaceFileManager.cpp  JSONReaderWriter.cpp  MachODylibReader.cpp  MachOReader.cpp  Path.cpp  ReexportFileWriter.cpp  Registry.cpp  SymbolVerifier.cpp  Utils.cpp  YAMLReaderWriter.cpp
lib/Diagnostics/: Diagnostics.cpp
lib/Driver/: APINormalizer.cpp  APINormalizer.h  APIVerifyDriver.cpp  ArchiveDriver.cpp  CMakeLists.txt  Configuration.cpp  ConfigurationFileReader.cpp  DirectoryScanner.cpp  Driver.cpp  DriverOptions.cpp  FileListVisitor.cpp  FileListVisitor.h  Glob.cpp  InstallAPIDriver.cpp  Options.cpp  ReexportDriver.cpp  SDKDBDriver.cpp  StubDriver.cpp
lib/Frontend/: APIVisitor.cpp  APIVisitor.h  CMakeLists.txt  Frontend.cpp  FrontendContext.cpp
lib/NoInits/: Debug.cpp  LowLevelType.cpp  WithColor.cpp
lib/ObjCMetadata/: CMakeLists.txt  ObjCMachOBinary.cpp  ObjCMetadata.cpp
lib/SDKDB/: BitcodeReader.cpp  BitcodeWriter.cpp  CMakeLists.txt  CompareConfigFileReader.cpp  PartialSDKDB.cpp  SDKDB.cpp  SDKDBBitcodeFormat.h
tapi-1400.0.11/: CMakeLists.txt  Readme.md
tapi-1400.0.11/docs/: SDKDB.rst
tapi-1400.0.11/lib/: CMakeLists.txt
tapi-1400.0.11/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Archive/: extract.test  extract_v3.test  merge.test  merge_v3.test  remove.test
test/Binary/: simple.test  swift.test  zippered.test
test/Driver/: help-hidden.test
test/Inputs/: CMakeLists.txt  api_unavailable.h  thread_local.yaml  unsupported_arch_armv4t.yaml  unsupported_macho_header.yaml
test/Inputs/CategoryAccessPropagation/: CMakeLists.txt  Public.h  Source.m
test/Inputs/CategoryPropertyOverrideInSPI/: CMakeLists.txt  Private.h  Public.h  Source.m
test/Inputs/ObjCMetadata/: CMakeLists.txt  ObjCClient.m  ObjCLib.h  ObjCLib.m
test/Inputs/RPath/: CMakeLists.txt  RPath.h  rpath.m
test/Inputs/SymbolMismatches/: CMakeLists.txt  CPP.h  Flags.h  MisMatch.h  MisMatch_Private.h  flags.cpp  mismatch.m  mismatch.mm  simple.m  simple2.h
test/Inputs/Umbrella4/: CMakeLists.txt  Umbrella4.m
test/Inputs/Umbrella4/Headers/: Bar.h  Umbrella4.h
test/Inputs/Umbrella4/Reexports/: Bar.m
test/Inputs/Umbrella5/: CMakeLists.txt
test/Inputs/Umbrella5/Headers/: Bar.h
test/InstallAPI/: alias_list.test  asm.test  auto_zipper.test  availability.test  code_coverage.test  commandline.test  cpp1.test  cpp2.test  cpp3.test  cpp4.test  cpp5.test  diagnostics-cpp.test  diagnostics.test  diagnostics1.test  diagnostics2.test  directory_iterator.test  dylib.test  dylib_fail.test  framework_search_path.test  hidden.test  iosmac.test  ivar.test  ivar_extension.test  merge.test  module.test  module2.test  mtargetos.test  product_name.test  project.test  rpath.test  serialized_diags.test  simple.test  single_arch_error.test  skip_write.test  special_linker_symbols.test  srcroot_match.test  subdirectories.test  swift.test  thread_local.test  umbrella2.test  (+11 more)
test/Outputs/: Version.tbd  Version2.tbd
test/Reexport/: api_unavailable.test  simple.test
test/SDKDB/: api-propagation.test  arch-diff.test  binary-diagnostics.test  bulk-diff.test  bundle.test  catalyst-search-paths.test  categories.test  category-access-propagation.test  category-property-override-in-spi.test  commandline.test  conflict-install-name.test  diagnostics.test  diff-config-file.test  diff-no-failed-project.test  diff-no-new-api.test  diff-non-sdk-install-name.test  diff-skip-enum-typedef.test  driverkit-headers-only.test  driverkit-search-paths.test  duplicate_objc.test  dynamic-property.test  env.test  existing-partial-sdkdb.test  header-scan-error.test  incompatible-unix-header.test  maccatalyst-headers-only.test  masking-private.test  no-allowlist.test  objc-class-export.test  overlay-2.test  overlay-3.test  pre-include.test  property.test  self-bind.test  self-bind2.test  simple.test  subframeworks.test  swift-api-extract-overlay.test  swift-api-extract-reproducer.test  swift-api-extract.test  (+3 more)
test/Stubify/: flat_namespace.test  inline_iosmac.test  inline_public_sdk_content_root.test  inline_zippered.test  inlining_v3.test  installapi_flag.test  reexported_symbols.test  simple.test  swift_version.test  symlink_sdk_content_root.test  unknown_architecture.test  unknown_platform.test
tools/: CMakeLists.txt
tools/api-json-diff/: CMakeLists.txt  api-json-diff.cpp
tools/libtapi/: CMakeLists.txt  LinkerInterfaceFile.cpp  libtapi.cpp  libtapi.exports
tools/tapi/: CMakeLists.txt  tapi.cpp
tools/tapi-binary-reader/: CMakeLists.txt  tapi-binary-reader.cpp
tools/tapi-frontend/: CMakeLists.txt  tapi-frontend.cpp
tools/tapi-run/: CMakeLists.txt  tapi-run.cpp
tools/tapi-sdkdb/: CMakeLists.txt  tapi-sdkdb.cpp
unittests/: CMakeLists.txt
unittests/JSON/: JSONSerializer.cpp
unittests/TapiCore/: CMakeLists.txt  FileListReader.cpp  HeaderFile.cpp  Utils.cpp
unittests/libtapi/: APIVersionTest.cpp  CMakeLists.txt  LibTapiTest.cpp  LibTapiTest.h  (+6 more)
(+773 files in other folders)
